objects/Budget.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>FundingAward</referenceTo>
        <relationshipLabel>Funding Source</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocated_Amount__c</fullName>
        <label>Allocated Amount</label>
        <summarizedField>BudgetAllocation.Amount</summarizedField>
        <summaryFilterItems>
            <field>BudgetAllocation.Status</field>
            <operation>equals</operation>
            <value>Allocated</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAllocation.BudgetId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Committed_Amount__c</fullName>
        <label>Committed Amount</label>
        <summarizedField>BudgetAllocation.Amount</summarizedField>
        <summaryFilterItems>
            <field>BudgetAllocation.Status</field>
            <operation>equals</operation>
            <value>Committed</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAllocation.BudgetId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External ID used for data manipulation and reference across orgs.

Created by Brian Ricter on 11/17/2022</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID used for data manipulation and reference across orgs.

Created by Brian Ricter on 11/17/2022</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Opportunity</label>
        <referenceTo>FundingOpportunity</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grantee_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grantee Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Grant</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Funds</relationshipLabel>
        <relationshipName>Funds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <summarizedField>BudgetAllocation.Amount</summarizedField>
        <summaryFilterItems>
            <field>BudgetAllocation.Status</field>
            <operation>equals</operation>
            <value>Finalized</value>
        </summaryFilterItems>
        <summaryForeignKey>BudgetAllocation.BudgetId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Remaining_Amount__c</fullName>
        <formula>Amount - ( Allocated_Amount__c + Committed_Amount__c + Paid_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <sharingModel>Read</sharingModel>
</CustomObject>